[package]
name = "imgui-rs-overlay"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
thiserror = "2.0.12"
imgui = "0.12.0"
imgui-winit-support = { version = "0.13.0" }
copypasta = "0.10.1"
windows = { version = "0.61.1", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_Controls", "Win32_UI_Input_KeyboardAndMouse", "Win32", "Win32_UI", "Win32_Graphics_Dwm"] }
obfstr = "0.4.3"
imgui-rs-vulkan-renderer = "1.16.0"
ash = { version = "0.38", default-features = false, features = ["loaded"] }
ash-window = "0.13.0"
nalgebra = "0.33.0"
winit = { version = "0.30", default-features = false, features = ["rwh_06"] }
[dev-dependencies]
anyhow = "1.0.75"
env_logger = "0.10.0"

[features]
windows = ["windows/Win32_System_Diagnostics",
    "windows/Win32_System_Diagnostics_Debug",
    "windows/Win32_System_Threading",
    "windows/Win32_System",
    "windows/Win32_System_ProcessStatus"]

windows_service = [
    "windows/Win32_System",
    "windows/Win32_System_Services"]

windows_wdk = [
    "windows/Wdk_Foundation",
    "windows/Win32_Security",
    "windows/Win32_System_WindowsProgramming",
    "windows/Wdk_System_IO",
    "windows/Wdk_System_Threading",
    "windows/Wdk_System_SystemServices"]
imgui = []
