[package]
name = "imgui-rs-overlay"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.27"
windows = { version = "0.61.1", features = ["Win32", "Win32_System", "Win32_System_LibraryLoader", "Win32_UI", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_Graphics_Dxgi", "Win32_Graphics_Dxgi_Common", "Win32_Graphics_Direct3D", "Win32_Graphics_Direct3D11", "Win32_UI_Controls", "Win32_Graphics_Dwm", "Win32_UI_Input", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_Console", "Win32_System_Threading"] }
imgui = { version = "0.12.0" }
lazy_static = "1.5.0"

[dev-dependencies]
env_logger = "0.11.8"
windows-sys = {version = "0.59.0", features = ["Win32_System_SystemServices"
    ,"Win32_System_Diagnostics_Ceip"
    ,"Win32_System_Diagnostics_Debug"
,"Win32_System_SystemInformation"]}
[build-dependencies]
cc = "1.2.21"
[features]
lib=[]